--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,24 @@
 			<version>4.0.0-RC1</version>
 		</dependency>
 
+		<!--<dependency>
+			<groupId>io.shardingsphere</groupId>
+			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+			<version>3.1.0</version>
+		</dependency>-->
+
+
+		<dependency>
+			<groupId>org.apache.shardingsphere</groupId>
+			<artifactId>sharding-jdbc-spring-namespace</artifactId>
+			<version>4.0.0-RC1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-		
+
 		<!-- <dependency>
 			<groupId>io.shardingjdbc</groupId>
 			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
