--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<shardingsphere.version>4.0.1</shardingsphere.version>
   </properties>
 
  <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.6.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath />
 	</parent>
 	<dependencies>
@@ -35,13 +36,12 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.42</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.16</version>
+			<artifactId>druid</artifactId>
+			<version>1.1.14</version>
 		</dependency>
 
 		<dependency>
@@ -49,25 +49,37 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8</version>
 		</dependency>
-		
-		<dependency>
+
+		<!--<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
 			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
 			<version>4.0.0-RC1</version>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>io.shardingsphere</groupId>
 			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
 			<version>3.1.0</version>
-		</dependency>-->
+		</dependency>
 
 
 		<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
 			<artifactId>sharding-jdbc-spring-namespace</artifactId>
 			<version>4.0.0-RC1</version>
+		</dependency>-->
+
+		<dependency>
+			<groupId>org.apache.shardingsphere</groupId>
+			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+			<version>${shardingsphere.version}</version>
 		</dependency>
+
+		<!--<dependency>
+			<groupId>org.apache.shardingsphere</groupId>
+			<artifactId>sharding-transaction-xa-core</artifactId>
+			<version>${shardingsphere.version}</version>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
