--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,25 @@
 			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
 			<version>${shardingsphere.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-context</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+
+		<!--监控+refresh配置-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.1.3.RELEASE</version>
+		</dependency>
 
 		<!--<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
